Bug #34989 read.cpp:39 missing newline in usage info for ndb_print_backup_file
Submitted: 2 Mar 2008 19:42 Modified: 10 Nov 2009 10:15
Reporter: Daniël van Eeden (OCA) Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Cluster: Cluster (NDB) storage engine Severity:S3 (Non-critical)
Version:5.1.23a-maria-alpha, 5.1 BK OS:Any
Assigned to: Jim Winstead CPU Architecture:Any
Tags: Contribution, patch

[2 Mar 2008 19:42] Daniël van Eeden
Description:
the usage info should end with a \n

How to repeat:
./ndb_print_backup_file

Suggested fix:
--- read.cpp.orig       2008-03-02 20:36:47.692698776 +0100
+++ read.cpp    2008-03-02 20:37:33.193469137 +0100
@@ -50,7 +50,7 @@
 
   ndb_init();
   if(argc <= 1){
-    printf("Usage: %s <filename>", argv[0]);
+    printf("Usage: %s <filename>\n", argv[0]);
     exit(1);
   }
   FILE * f = fopen(argv[1], "rb");
[3 Mar 2008 11:59] Sveta Smirnova
Thank you for the report.

Verified as described.
[3 Mar 2008 12:02] Sveta Smirnova
Workaround:
bin/ndb_print_backup_file; printf "\n"
[28 Apr 2009 18:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/72937

2879 Jim Winstead	2009-04-28
      Add missing newline to usage message of ndb_print_backup_file (Bug #34989)
      modified:
        storage/ndb/src/kernel/blocks/backup/read.cpp
[5 May 2009 18:04] Jim Winstead
Queued to 5.1-bugteam and 6.0-bugteam.
[26 May 2009 9:11] Masood Mortazavi
Hi Daniel - 

This was a rather simple fix and minor contribution. 

However, since you seem interested in contributing to MySQL, in general, may I suggest that you sign the Sun|MySQL contributor agreement, i.e. the SCA.

The instructions are given here:
http://forge.mysql.com/wiki/Sun_Contributor_Agreement

This will facilitate the handling of your potential other contributions in the future.
[28 May 2009 8:16] Bugs System
Pushed into 5.1.36 (revid:joro@sun.com-20090528073639-yohsb4q1jzg7ycws) (version source revid:mats@sun.com-20090511132802-nnkiyb2huih1tklz) (merge vers: 5.1.35) (pib:6)
[30 May 2009 17:01] Jon Stephens
It's a Cluster executable, hence Category -> Cluster.
[1 Jun 2009 9:35] Jon Stephens
Hi, we don't support Cluster in 5.1-main anymore.

Please push this to the telco-6.x/7.x trees.

Setting bocklin as lead so he'll see this.
[17 Jun 2009 19:23] Bugs System
Pushed into 5.4.4-alpha (revid:alik@sun.com-20090616183122-chjzbaa30qopdra9) (version source revid:jimw@mysql.com-20090505173706-9ze3q4qzngw8kt2b) (merge vers: 6.0.12-alpha) (pib:11)
[26 Aug 2009 13:46] Bugs System
Pushed into 5.1.37-ndb-7.0.8 (revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)
[26 Aug 2009 13:46] Bugs System
Pushed into 5.1.37-ndb-6.3.27 (revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (version source revid:jonas@mysql.com-20090826105955-bkj027t47gfbamnc) (merge vers: 5.1.37-ndb-6.3.27) (pib:11)
[26 Aug 2009 13:48] Bugs System
Pushed into 5.1.37-ndb-6.2.19 (revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (version source revid:jonas@mysql.com-20090825194404-37rtosk049t9koc4) (merge vers: 5.1.37-ndb-6.2.19) (pib:11)
[27 Aug 2009 16:32] Bugs System
Pushed into 5.1.35-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20090827163030-6o3kk6r2oua159hr) (version source revid:jonas@mysql.com-20090826132541-yablppc59e3yb54l) (merge vers: 5.1.37-ndb-7.0.8) (pib:11)