Add missing newline to usage message of ndb_print_backup_file (Bug #34989)